Cambio de nombre
Cambio de nombre

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 <body>
     <header>
         <div id="headerone">
-        <h1 class="header">Platzinauta</h1>
+        <h1 class="header">LUis Mendoza</h1>
         <div class="description">
             <h2>Like <a class="links" href="https://spacex.com" target="_blank">SpaceX</a> and <a class="links"  href="https://platzi.com/" target="_blank">Platzi</a>? look launches info, for Platzinautas like you!</h2>
         </div>
